<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_id"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toStartOf="@+id/etFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etIdn"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_nombre"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvBodega"
        app:layout_constraintEnd_toEndOf="@+id/tvId"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvId" />

    <TextView
        android:id="@+id/tvBodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_bodega"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvColor"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_fecha"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/etFecha"
        app:layout_constraintEnd_toEndOf="@+id/tvGraduacion"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGraduacion" />

    <EditText
        android:id="@+id/etBodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etColor"
        app:layout_constraintStart_toStartOf="@+id/etColor"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGraduación"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etGraduación"
        app:layout_constraintStart_toStartOf="@+id/etGraduación"
        app:layout_constraintTop_toBottomOf="@+id/etColor"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btAñadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_añadir"
        app:layout_constraintEnd_toStartOf="@+id/btCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btCancel" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"
        android:text="@string/bt_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAñadir"
        app:layout_constraintTop_toBottomOf="@+id/etFecha" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etBodega"
        app:layout_constraintStart_toStartOf="@+id/etBodega"
        app:layout_constraintTop_toBottomOf="@+id/etIdn"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etOrigen"
        app:layout_constraintStart_toStartOf="@+id/etOrigen"
        app:layout_constraintTop_toBottomOf="@+id/etBodega"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etGraduación"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etFecha"
        app:layout_constraintStart_toStartOf="@+id/etFecha"
        app:layout_constraintTop_toBottomOf="@+id/etOrigen"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvOrigen"
        app:layout_constraintEnd_toEndOf="@+id/tvBodega"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBodega" />

    <TextView
        android:id="@+id/tvOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_origen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvGraduacion"
        app:layout_constraintEnd_toEndOf="@+id/tvColor"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor" />

    <TextView
        android:id="@+id/tvGraduacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_graduacion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvFecha"
        app:layout_constraintEnd_toEndOf="@+id/tvOrigen"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrigen" />

    <TextView
        android:id="@+id/tvVino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_vino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCancel" />

    <EditText
        android:id="@+id/etIdn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/et_idn"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="@+id/etNombre"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>